use token from auth config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 git+https://github.com/wazo-platform/wazo-confd-client.git
+git+https://github.com/wazo-platform/wazo-calld-client.git
+git+https://github.com/wazo-platform/wazo-auth-client.git
 git+https://github.com/wazo-platform/wazo-confd.git
 git+https://github.com/wazo-platform/wazo-call-logd.git
 git+https://github.com/wazo-platform/xivo-lib-python.git
