--- a/etc/wazo-calld/conf.d/50-workano-otp-plugin.yml
+++ b/etc/wazo-calld/conf.d/50-workano-otp-plugin.yml
@@ -1,2 +1,6 @@
 enabled_plugins:
   workano_otp_plugin: true
+
+otp-plugin:
+  token: 23f091e8-7800-4275-b3fc-43ddadbe9f4b
+  tenant: d41c632c-68d2-457f-b064-c0f479515255
